--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "vite": "^5.2.0"
   }
 }
